# hr2kcal

./: .gitignore  LICENSE  README.md  profile.yaml  pyproject.toml  requirements.txt  run.bat
examples/: profile.example.yaml
fit_files/: sample.fit
scripts/: run.bat
src/hr_energy_lab/: hr_interactive.py
